# space-looter

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  build-info.json  build-web.sh  index.html  netlify-build.sh  netlify.toml  serve.js  serve.py  space_looter.js
.github/actions/setup-system-deps/: action.yml
.github/workflows/: ci.yml  deploy.yml
assets/audio/: AUDIO_ASSETS.md
examples/: audio_test.rs
src/: README.md  lib.rs  main.rs
src/application/: mod.rs
src/application/services/: game_session.rs  input_handler.rs  mod.rs
src/application/use_cases/: handle_collision.rs  mod.rs  move_player.rs  spawn_enemies.rs  update_score.rs
src/domain/: constants.rs  mod.rs
src/domain/entities/: audio.rs  base.rs  enemy.rs  event.rs  game.rs  map.rs  mod.rs  player.rs  quest.rs  resource.rs
src/domain/services/: audio_service.rs  collision.rs  game_log_service.rs  map_service.rs  mod.rs  resource_rewards.rs  resting_service.rs  spawning.rs  tile_cache_service.rs  tile_movement.rs  visibility_service.rs
src/domain/services/font_service/: mod.rs
src/domain/value_objects/: dice.rs  mod.rs  position.rs  resources.rs  score.rs  terrain.rs  velocity.rs
src/infrastructure/: audio_assets.rs  mod.rs
src/infrastructure/bevy/: audio.rs  components.rs  font_service.rs  mod.rs  resources.rs  systems.rs
src/infrastructure/random/: generator.rs  mod.rs
src/infrastructure/time/: mod.rs
src/infrastructure/web/: mod.rs
src/presentation/: audio_integration.rs  floating_text.rs  game_event_logger.rs  game_log_integration.rs  game_state.rs  game_ui.rs  input.rs  log_interceptor.rs  map_renderer.rs  mod.rs  rendering.rs  speech_bubbles.rs
src/presentation/movement/: mod.rs
web/: index.html
