[package]
name = "space-looter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.16.1", features = ["webgl2"] }
chrono = { version = "0.4", features = ["serde"] }

# Web-specific dependencies (only for WASM builds)
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Performance",
    "Navigator",
    "HtmlElement",
    "CssStyleDeclaration",
], optional = true }

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

# Features
[features]
default = []
web = [
    "web-sys",
    "wasm-bindgen",
    "js-sys",
    "console_error_panic_hook",
    "wasm-logger",
]

# Optimizations for release builds
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = "s"

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3

# Development profile for faster builds
[profile.dev]
opt-level = 1

# WASM release profile for smaller binaries
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
