[package]
name = "space-looter"
version = "0.2.0"
edition = "2021"
description = "A 3D isometric space exploration RPG with dice-based mechanics"
authors = ["Space Looter Team"]
license = "MIT"
repository = "https://github.com/your-username/space-looter"
keywords = ["game", "rpg", "dice", "3d", "isometric", "space", "exploration"]
categories = ["games"]

[[bin]]
name = "space-looter"
path = "src/main.rs"

[lib]
name = "space_looter"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core game engine with 3D support and audio
bevy = { version = "0.16.1", features = ["webgl2", "vorbis", "wav"] }

# RPG mechanics and data handling
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Dice rolling and procedural generation
rand = { version = "0.8", features = ["getrandom"] }
fastrand = "2.0"
noise = "0.9"

# Web-specific dependencies (only for WASM builds)
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Performance",
    "Navigator",
    "HtmlElement",
    "CssStyleDeclaration",
], optional = true }

wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }

# Features
[features]
default = []
web = [
    "web-sys",
    "wasm-bindgen",
    "js-sys",
    "console_error_panic_hook",
    "wasm-logger",
]

# Optimizations for release builds
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = "s"

# WASM-specific optimizations
[profile.release.package."*"]
opt-level = 3

# Development profile for faster builds
[profile.dev]
opt-level = 1

# WASM release profile for smaller binaries
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
